--- a/theme/popupStyles.css
+++ b/theme/popupStyles.css
@@ -5,11 +5,12 @@
 }
 label {
 	font-family: 'Poppins', sans-serif;
-	font-size: 11.5px;
-	font-weight: normal;
-	padding: inherit;
+	font-size: 15px;
+	font-weight: 100;
 	color: #000;
 	margin-bottom: 3px;
+	align-self: center;
+	padding: 12px;
 }
 span {
 	color: #8A8A8A;
@@ -18,6 +19,73 @@ span {
 	
 
 }
+
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+  }
+  
+  .switch input { 
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+
+  .input-value {
+	display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+	border-bottom: 1px solid #ada6a6;
+  }
+  
+  .slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  input:checked + .slider {
+	background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+	border-radius: 34px;
+  }
+  
+  .slider.round:before {
+	border-radius: 50%;
+  }
 h1 {
 	margin: 0;
 }
@@ -83,7 +151,7 @@ textarea[name="coverLetter"] {
 	height: 75px;
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
 	
 }
 .header-name {
@@ -388,6 +456,7 @@ margin: 5px 0px;
 	height: 2px;
 	padding: 9px;
 	margin: 25px 15px;
+	margin-left: auto;
   }
   
   .switch input { 
@@ -418,16 +487,6 @@ margin: 5px 0px;
 	background-color: white;
 	-webkit-transition: .4s;
 	transition: .4s;
-  }
-  
-  input:checked + .slider {
-	background-color: #C5FDE2
-	;
-  }
-  
-  input:focus + .slider {
-	box-shadow: 0 0 1px #C5FDE2
-	;
   }
   
   input:checked + .slider:before {
